      Patch by Mathias Panzenböck.
    * Amazon store: It is now possible to add items to your shopping cart using amarok:// URLs.
    * Amazon store: Use the context info applet to show further infos about a selected item.
    * New argument --debug-audio to enable Phonon debugging.
    * Amazon store: We now ship a utility to handle downloads from Amazon.

  CHANGES:
    * When configuring Last.fm plug-in, the changes are now applied immediately
      in most places. (BR 311331)
    * If liblastfm is provided, it is strongly recommended to use version 1.0.3 or newer
      for fixes of bugs that otherwise prevent iPod scrobbling and synchronization.
    * Configure Amarok dialog gets new Metadata tab to grab some weight from the
      Collection tab and to configure statistics synchronization.
    * APG now saves its presets each time it's run, to lessen preset loss if
      Amarok crashes. (BR 294743)
    * APG playlists no longer limited to 100 tracks. (BR 301829)
    * The confusing "Local Collection Backends" category of plugins was removed
      from the Configure dialog. All backends are enabled from now on.
    * Statistics of tracks outside of collections are only read/saved to file
      tags (if enabled) instead of being kept in the database.
    * Last.fm Skip button removed; Last.fm API no longer provides it. (BR 305576)
    * Optional liblastfm dependency raised to 1.0.0. (BR 302597)
    * Add composer button to wikipedia applet (BR 272982)
    * New optional dependency for Amazon downloads: clamz.

  BUGFIXES:
    * Fix suboptimal KWallet usage in Last.fm plugin. (BR 292096)
    * Fix crash in Last.fm plugin caused by sloppy KWallet usage. (BR 306134)
    * Fix WMA files interpret Album as Album Artist (BR 276015)
    * Fix after adding next slash previous one disappears in organize collection (BR 296136)
    * Fix Dynamic Collection and other features not working if the database was
      initially created by a very old Amaork version. (BR 302837)