@@ -84,16 +84,17 @@ include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}/shared
     ${CMAKE_CURRENT_BINARY_DIR}/shared )
 
+set(QT_MIN_VERSION "4.8.0")
 if( WITH_PLAYER )
-    set(KDE_MIN_VERSION "4.6.0")
-    find_package( KDE4 REQUIRED )
+    set(KDE_MIN_VERSION "4.8.4")
+    find_package( KDE4 REQUIRED ) # honours QT_MIN_VERSION
     include (KDE4Defaults)
     include (MacroLibrary)
 
     include(MacroBoolTo01)
     include(MacroLogFeature)
 
-    macro_log_feature( KDE4_FOUND "kdelibs" "The toolkit Amarok uses to build" "http://www.kde.org" TRUE "4.6.0" "" )
+    macro_log_feature( KDE4_FOUND "kdelibs" "The toolkit Amarok uses to build" "http://www.kde.org" TRUE ${KDE_MIN_VERSION} "" )
 
     find_package( QtScriptQtBindings )
     macro_log_feature( QTSCRIPTQTBINDINGS_FOUND "qtscript-qt" "QtScript Qt Bindings" "http://code.google.com/p/qtscriptgenerator/" FALSE "" "" )
@@ -237,7 +238,7 @@ if( WITH_PLAYER )
     #DOC_SUBDIR
 
 else( WITH_PLAYER )
-    find_package( Qt4 REQUIRED )
+    find_package( Qt4 REQUIRED ) # honours QT_MIN_VERSION
     add_definitions(${QT_DEFINITIONS})
 endif( WITH_PLAYER )
 
